<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.AddActivity"
    android:background="#65A69A"
    android:id="@+id/layoutMainAdd"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ediTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:hint="@string/editTitle"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ediTitle"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:hint="@string/editContent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18dp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_layout"
            android:text="@string/btnAdd"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>